# upsolver-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
doc/: dbapi-ex.py
upsolver/: utils.py
upsolver/client/: api.py  api_utils.py  auth.py  errors.py  poller.py  query.py  requester.py  response.py
upsolver/dbapi/: README.md  __init__.py  connection.py  cursor.py  exceptions.py  utils.py
upsolver/examples/: example_notebook.ipynb
upsolver/sdk/: client.py
upsolver/test_scripts/: select.usql
upsolver/tests/: mock_upsolver_rest_api.py  test_auth_filler.py  test_dbapi.py  test_nested_dict.py  test_qodo.py  test_requester.py
upsolverapi/dbapi/: README.md  connection.py  cursor.py  utils.py
upsolverapi/examples/: example_notebook.ipynb
upsolverapi/src/: client.py  utils.py
