[tool.poetry]
name = "upsolver-sdk-python"
version = "0.1.0"
description = "Python API and SDK for Upsolver"
authors = ["Your Name <you@example.com>"]
license = "TBD"
readme = "README.md"
packages = [
    {include = "upsolver/sdk"},
    {include = "upsolver/dbapi"},
    {include = "upsolver/client"}
    ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
